objects/ssot__BusinessRegulatoryAuthType__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BusinessTypeId__c</fullName>
        <label>Business Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Business Regulatory Auth Type Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegulatoryAuthorizationTypeId__c</fullName>
        <label>Regulatory Authorization Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1739512781836_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BusinessRegulatoryAuthType_Regulator_rel</label>
        <referenceTo>ssot__RegulatoryAuthorizationType__dlm</referenceTo>
        <relationshipLabel>BusinessRegulatoryAuthType_Regulator_rel</relationshipLabel>
        <relationshipName>rel_1739512781836_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1739512785062_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BusinessRegulatoryAuthType_BusinessT_rel</label>
        <referenceTo>ssot__BusinessType__dlm</referenceTo>
        <relationshipLabel>BusinessRegulatoryAuthType_BusinessT_rel</relationshipLabel>
        <relationshipName>rel_1739512785062_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>